# Fractal-Image-Generator

./: .gitignore  Fractal Image Generator.sln  README.md
Fractal Image Generator/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Fractal Image Generator.vcxproj  Fractal Image Generator.vcxproj.filters  FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  Presets.cpp  Presets.h  RGB.cpp  RGB.h  Zoom.h  ZoomList.cpp  ZoomList.h  bitmapFileHeader.h  bitmapInfoHeader.h  main.cpp
